Fix video layout

--- a/src/components/OT/components/OTPublisher/OTPublisher.module.css
+++ b/src/components/OT/components/OTPublisher/OTPublisher.module.css
@@ -5,13 +5,7 @@
   display: flex;
 }
 
-.videoContainer {
-  overflow: hidden;
-  display: flex;
-}
-
-.videoContainer > video {
-  width: 100%;
+.main video {
   border: 1px solid transparent;
   border-radius: 8px;
 }
