--- a/src/components/VideoContainer/VideoContainer.module.css
+++ b/src/components/VideoContainer/VideoContainer.module.css
@@ -6,10 +6,14 @@
 }
 
 .dominant {
-  flex-basis: 90%;
+  flex-basis: 70%;
   display: flex;
   justify-content: center;
   overflow: hidden;
+}
+
+.video {
+  height: 100%;
 }
 
 .normal {
@@ -27,6 +31,6 @@
 }
 
 .participants.small {
-  flex-basis: 10%;
+  flex-basis: 30%;
   flex-direction: column;
 }
